--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,52 +1,88 @@
+# Version Catalog Configuration
+# This file centralizes all dependency versions and declarations for the project
+
 [versions]
+# Android Gradle Plugin version
 agp = "8.11.1"
+# Kotlin version (must be compatible with AGP)
 kotlin = "2.2.0"
-coreKtx = "1.16.0"
-coroutine = "1.10.2"
-appcompat = "1.7.1"
-lottie = "6.6.7"
-webkit = "1.14.0"
-ytdlp = "0.17.4"
-circleimageview = "3.1.0"
-storage = "2.2.0"
-permissionx = "1.8.1"
-glide = "4.16.0"
-gson = "2.13.1"
-okhttp = "5.1.0"
-jsoup = "1.21.1"
-media3player = "1.7.1"
-viewpager2 = "1.1.0"
-cardview = "1.0.0"
-lifecycleProcess = "2.9.2"
+
+# AndroidX Core libraries
+coreKtx = "1.16.0"            # AndroidX Core KTX extensions
+appcompat = "1.7.1"           # AppCompat library
+webkit = "1.14.0"             # Android WebView support
+viewpager2 = "1.1.0"          # Modern ViewPager implementation
+cardview = "1.0.0"            # Material CardView
+lifecycleProcess = "2.9.2"    # Lifecycle-aware components
+
+# Kotlin Coroutines
+coroutine = "1.10.2"          # Coroutines version
+
+# UI Components
+lottie = "6.6.7"              # Lottie animations
+circleimageview = "3.1.0"     # Circular ImageView
+
+# Media Playback
+media3player = "1.7.1"        # AndroidX Media3/ExoPlayer
+
+# Networking
+okhttp = "5.1.0"              # OkHttp HTTP client
+gson = "2.13.1"               # Google JSON parser
+jsoup = "1.21.1"              # HTML parser
+
+# Image Loading
+glide = "4.16.0"              # Glide image loading library
+
+# Permissions & Storage
+permissionx = "1.8.1"         # Runtime permissions helper
+storage = "2.2.0"             # Storage Access Framework helper
+
+# Video Downloading
+ytdlp = "0.17.4"              # YouTube-DL wrapper library
 
 [libraries]
+# AndroidX Libraries
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-webkit = { module = "androidx.webkit:webkit", version.ref = "webkit" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+androidx-viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2" }
+androidx-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
+androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycleProcess" }
+
+# Kotlin Coroutines
 kotlin_coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutine" }
 kotlin_coroutines_core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutine" }
-androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 
+# UI Components
 lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
-ytdlp_ffmpeg = { module = "io.github.junkfood02.youtubedl-android:ffmpeg", version.ref = "ytdlp" }
-ytdlp_library = { module = "io.github.junkfood02.youtubedl-android:library", version.ref = "ytdlp" }
-
 circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
-saf_storage = { module = "com.anggrayudi:storage", version.ref = "storage" }
-permissionx = { module = "com.guolindev.permissionx:permissionx", version.ref = "permissionx" }
-glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
-okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
-gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
-jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
+
+# Media Playback (ExoPlayer)
 media3_exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3player" }
 media3_exoplayer_hls = { module = "androidx.media3:media3-exoplayer-hls", version.ref = "media3player" }
 media3_exoplayer_dash = { module = "androidx.media3:media3-exoplayer-dash", version.ref = "media3player" }
 media3_session = { module = "androidx.media3:media3-session", version.ref = "media3player" }
 media3-datasource = { module = "androidx.media3:media3-datasource", version.ref = "media3player" }
 media3_ui = { module = "androidx.media3:media3-ui", version.ref = "media3player" }
-androidx-viewpager2 = { group = "androidx.viewpager2", name = "viewpager2", version.ref = "viewpager2" }
-androidx-cardview = { group = "androidx.cardview", name = "cardview", version.ref = "cardview" }
-androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version.ref = "lifecycleProcess" }
+
+# Networking
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
+
+# Image Loading
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+
+# Permissions & Storage
+permissionx = { module = "com.guolindev.permissionx:permissionx", version.ref = "permissionx" }
+saf_storage = { module = "com.anggrayudi:storage", version.ref = "storage" }
+
+# Video Downloading
+ytdlp_ffmpeg = { module = "io.github.junkfood02.youtubedl-android:ffmpeg", version.ref = "ytdlp" }
+ytdlp_library = { module = "io.github.junkfood02.youtubedl-android:library", version.ref = "ytdlp" }
 
 [plugins]
+# Android Gradle Plugin
 android-application = { id = "com.android.application", version.ref = "agp" }
+# Kotlin Android Plugin
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
