feat: add opening screen to preload model data before launching main activity
- Implemented an initial loading/opening screen
- Loads model data in the background to improve user experience
- Transitions to the main (mother) activity once data is ready
====================
-- part 2

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,7 @@ dependencies {
     implementation libs.androidx.cardview        // CardView
     implementation libs.circleimageview          // Circular ImageView
     implementation libs.androidx.webkit          // Android WebView support
+    implementation libs.constraint.layout // Android layout view
 
     // Kotlin and Coroutines
     implementation libs.androidx.core.ktx         // Kotlin extensions for Android
@@ -163,5 +164,5 @@ dependencies {
 
     // Video downloading specific
     implementation libs.ytdlp.library            // YouTube-DL wrapper
-    implementation libs.ytdlp.ffmpeg            // FFmpeg integration
+    implementation libs.ytdlp.ffmpeg             // FFmpeg integration
 }
